fixed sheral's image issue on small screen

--- a/BBG/style.css
+++ b/BBG/style.css
@@ -379,4 +379,19 @@ footer {
   .map iframe {
     max-width: 80%;
   }
+
+  .contact img {
+      max-width: 50%;
+      max-height: 50%;
+      position: relative;
+      left: 25%;
+      border-radius: 45%;
+      margin-bottom: 3%;
+    
+  }
+
+  .contact p {
+    text-align: left;
+    margin: 5% 30%;
+  }
 }
